# bloomsday

./: Cargo.toml  README.md
.cargo/: config.toml
benches/: comparison.rs
src/: lib.rs
